--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Jesus Lopez",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon ./index.js"
+    "dev": "nodemon ./index.js",
+    "start": "node ./index.js"
   },
   "dependencies": {
     "apollo-server": "^2.15.0",
